// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartEmpty stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-muted flex-1 min-w-full w-full"
    data-testid="sf-cart-empty"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-14"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm max-w-md mx-auto"
        data-slot="card"
      >
        <div
          class="p-8 text-center"
          data-slot="card-content"
        >
          <div
            class="space-y-6"
          >
            <div
              class="mx-auto w-16 h-16 bg-muted rounded-full flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-8 h-8 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h2
                class="tracking-tight text-xl text-center font-semibold text-foreground"
              >
                Your cart is empty.
              </h2>
              <p
                class="text-muted-foreground"
              >
                Sign in to retrieve your saved items or continue shopping.
              </p>
            </div>
            <div
              class="space-y-3"
            >
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
                data-size="default"
                data-slot="button"
                data-variant="default"
                href="/"
              >
                Continue Shopping
              </a>
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex items-center justify-center gap-2"
                data-size="default"
                data-slot="button"
                data-variant="outline"
                href="/account"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-user w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
                Sign In
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartEmpty stories snapshot > DesktopView story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-muted flex-1 min-w-full w-full"
    data-testid="sf-cart-empty"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-14"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm max-w-md mx-auto"
        data-slot="card"
      >
        <div
          class="p-8 text-center"
          data-slot="card-content"
        >
          <div
            class="space-y-6"
          >
            <div
              class="mx-auto w-16 h-16 bg-muted rounded-full flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-8 h-8 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h2
                class="tracking-tight text-xl text-center font-semibold text-foreground"
              >
                Your cart is empty.
              </h2>
              <p
                class="text-muted-foreground"
              >
                Sign in to retrieve your saved items or continue shopping.
              </p>
            </div>
            <div
              class="space-y-3"
            >
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
                data-size="default"
                data-slot="button"
                data-variant="default"
                href="/"
              >
                Continue Shopping
              </a>
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex items-center justify-center gap-2"
                data-size="default"
                data-slot="button"
                data-variant="outline"
                href="/account"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-user w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
                Sign In
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartEmpty stories snapshot > GuestUser story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-muted flex-1 min-w-full w-full"
    data-testid="sf-cart-empty"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-14"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm max-w-md mx-auto"
        data-slot="card"
      >
        <div
          class="p-8 text-center"
          data-slot="card-content"
        >
          <div
            class="space-y-6"
          >
            <div
              class="mx-auto w-16 h-16 bg-muted rounded-full flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-8 h-8 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h2
                class="tracking-tight text-xl text-center font-semibold text-foreground"
              >
                Your cart is empty.
              </h2>
              <p
                class="text-muted-foreground"
              >
                Sign in to retrieve your saved items or continue shopping.
              </p>
            </div>
            <div
              class="space-y-3"
            >
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
                data-size="default"
                data-slot="button"
                data-variant="default"
                href="/"
              >
                Continue Shopping
              </a>
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex items-center justify-center gap-2"
                data-size="default"
                data-slot="button"
                data-variant="outline"
                href="/account"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-user w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
                Sign In
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartEmpty stories snapshot > MobileView story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-muted flex-1 min-w-full w-full"
    data-testid="sf-cart-empty"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-14"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm max-w-md mx-auto"
        data-slot="card"
      >
        <div
          class="p-8 text-center"
          data-slot="card-content"
        >
          <div
            class="space-y-6"
          >
            <div
              class="mx-auto w-16 h-16 bg-muted rounded-full flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-8 h-8 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h2
                class="tracking-tight text-xl text-center font-semibold text-foreground"
              >
                Your cart is empty.
              </h2>
              <p
                class="text-muted-foreground"
              >
                Sign in to retrieve your saved items or continue shopping.
              </p>
            </div>
            <div
              class="space-y-3"
            >
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
                data-size="default"
                data-slot="button"
                data-variant="default"
                href="/"
              >
                Continue Shopping
              </a>
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex items-center justify-center gap-2"
                data-size="default"
                data-slot="button"
                data-variant="outline"
                href="/account"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-user w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
                Sign In
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartEmpty stories snapshot > RegisteredUser story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-muted flex-1 min-w-full w-full"
    data-testid="sf-cart-empty"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-14"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm max-w-md mx-auto"
        data-slot="card"
      >
        <div
          class="p-8 text-center"
          data-slot="card-content"
        >
          <div
            class="space-y-6"
          >
            <div
              class="mx-auto w-16 h-16 bg-muted rounded-full flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-8 h-8 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h2
                class="tracking-tight text-xl text-center font-semibold text-foreground"
              >
                Your cart is empty.
              </h2>
              <p
                class="text-muted-foreground"
              >
                Continue shopping to add items to your cart.
              </p>
            </div>
            <div
              class="space-y-3"
            >
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
                data-size="default"
                data-slot="button"
                data-variant="default"
                href="/"
              >
                Continue Shopping
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartEmpty stories snapshot > TabletView story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-muted flex-1 min-w-full w-full"
    data-testid="sf-cart-empty"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-14"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm max-w-md mx-auto"
        data-slot="card"
      >
        <div
          class="p-8 text-center"
          data-slot="card-content"
        >
          <div
            class="space-y-6"
          >
            <div
              class="mx-auto w-16 h-16 bg-muted rounded-full flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-8 h-8 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h2
                class="tracking-tight text-xl text-center font-semibold text-foreground"
              >
                Your cart is empty.
              </h2>
              <p
                class="text-muted-foreground"
              >
                Sign in to retrieve your saved items or continue shopping.
              </p>
            </div>
            <div
              class="space-y-3"
            >
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
                data-size="default"
                data-slot="button"
                data-variant="default"
                href="/"
              >
                Continue Shopping
              </a>
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex items-center justify-center gap-2"
                data-size="default"
                data-slot="button"
                data-variant="outline"
                href="/account"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-user w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
                Sign In
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
